--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Sistema de monitoração pra devices ESP",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "device": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
