--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "Sistema de monitoração pra devices ESP",
   "main": "server.js",
   "scripts": {
+    "backend": "nodemon server.js",
+    "frontend": "cd frontend && npm start",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "device": "nodemon server.js",
+    "device": "concurrently \"npm run backend\" \"npm run frontend\"",
     "start": "node server.js"
   },
   "keywords": [],
@@ -13,6 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.2",
+    "concurrently": "^8.2.2",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mongoose": "^8.1.0",
